# agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  deploy.sh  fly.toml  go.mod  go.sum  pnpm-workspace.yaml  tb.out  tokenbridge_cov.out
.next/: trace  trace-build
client-portal/: components.json  middleware.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
deploy/: Caddyfile  agents-cron.service  agents-cron.timer  agents-portal.service  agents-ws.service  docker-compose.yml  setup.sh
desktop/: .gitignore  electron-builder.yml  package.json  pnpm-lock.yaml  tailwind.config.js
docs/: claude-code-integration.md  property-traffic-monitor-ralph-prompt.md  property-traffic-spike-detection.md
portal/: .env.local.example  components.json  extract-linkedin-creds.ts  (+3 more)
services/property-traffic-monitor/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  seed.py  verify.py
services/property-traffic-monitor/src/: config.py  db.py  main.py  models.py  scheduler.py
services/property-traffic-monitor/src/api/: routes.py  websocket.py
services/property-traffic-monitor/src/extension/: background.js  content.js  manifest.json  popup.html  popup.js
services/property-traffic-monitor/src/monitors/: base.py  crux.py  google_autocomplete.py  google_cache.py  google_trends.py  page_change.py  social_signals.py  wayback.py
services/property-traffic-monitor/src/signals/: aggregator.py
services/property-traffic-monitor/tests/: test_api.py  test_monitors.py  test_signals.py
(+1153 files in other folders)
